compiler/frontend/parser.py
from __future__ import annotations

from dataclasses import dataclass

from compiler.common.collection_protocols import (
    COLLECTION_METHOD_LEN,
    COLLECTION_METHOD_SLICE_GET,
    COLLECTION_METHOD_SLICE_SET,
)
from compiler.common.type_names import TYPE_NAME_I64
from compiler.frontend.ast_nodes import *
from compiler.frontend.literals import int_literal_expr, literal_expr_from_token
from compiler.frontend.lexer import SourceSpan, Token
from compiler.frontend.tokens import TYPE_NAME_TOKENS, UNARY_START_TOKENS, TokenKind


class ParserError(ValueError):
    def __init__(self, message: str, span: SourceSpan):
        super().__init__(f"{message} at {span.start.path}:{span.start.line}:{span.start.column}")
        self.message = message
        self.span = span


@dataclass
class TokenStream:
    tokens: list[Token]
    index: int = 0

    def __post_init__(self) -> None:
        if not self.tokens:
            raise ValueError("TokenStream requires at least one token (EOF)")

    def is_at_end(self) -> bool:
        return self.peek().kind == TokenKind.EOF

    def peek(self, offset: int = 0) -> Token:
        target = self.index + offset
        if target < 0:
            return self.tokens[0]
        if target >= len(self.tokens):
            return self.tokens[-1]
        return self.tokens[target]

    def previous(self) -> Token:
        return self.peek(-1)

    def advance(self) -> Token:
        current = self.peek()
        if not self.is_at_end():
            self.index += 1
        return current

    def check(self, kind: TokenKind) -> bool:
        return self.peek().kind == kind

    def check_any(self, *kinds: TokenKind) -> bool:
        return self.peek().kind in kinds

    def match(self, *kinds: TokenKind) -> bool:
        if self.check_any(*kinds):
            self.advance()
            return True
        return False

    def expect(self, kind: TokenKind, message: str) -> Token:
        if self.check(kind):
            return self.advance()
        raise ParserError(message, self.peek().span)


class Parser:
    def __init__(self, tokens: list[Token]):
        self.stream = TokenStream(tokens)
        self._sugar_symbol_counter = 0

    def _next_sugar_symbol(self, stem: str) -> str:
        value = self._sugar_symbol_counter
        self._sugar_symbol_counter += 1
        return f"__nif_sugar_{stem}_{value}"

    def parse_module(self) -> ModuleAst:
        imports: list[ImportDecl] = []
        classes: list[ClassDecl] = []
        functions: list[FunctionDecl] = []
        interfaces: list[InterfaceDecl] = []

        start = self.stream.peek().span.start

        while not self.stream.is_at_end():
            if self.stream.match(TokenKind.IMPORT):
                imports.append(self._parse_import_decl(is_export=False, import_token=self.stream.previous()))
                continue

            if self.stream.match(TokenKind.EXPORT):
                export_token = self.stream.previous()
                if self.stream.match(TokenKind.IMPORT):
                    imports.append(
                        self._parse_import_decl(
                            is_export=True, import_token=self.stream.previous(), export_token=export_token
                        )
                    )
                    continue

                if self.stream.match(TokenKind.CLASS):
                    classes.append(
                        self._parse_class_decl(
                            is_export=True, class_token=self.stream.previous(), export_token=export_token
                        )
                    )
                    continue

                if self.stream.match(TokenKind.INTERFACE):
                    interfaces.append(
                        self._parse_interface_decl(
                            is_export=True, interface_token=self.stream.previous(), export_token=export_token
                        )
                    )
                    continue

                if self.stream.match(TokenKind.FN):
                    functions.append(
                        self._parse_function_decl(
                            is_export=True, fn_token=self.stream.previous(), export_token=export_token
                        )
                    )
                    continue

                if self.stream.match(TokenKind.EXTERN):
                    extern_token = self.stream.previous()
                    fn_token = self.stream.expect(TokenKind.FN, "Expected 'fn' after 'extern'")
                    functions.append(
                        self._parse_extern_function_decl(
                            is_export=True, fn_token=fn_token, extern_token=extern_token, export_token=export_token
                        )
                    )
                    continue

                raise ParserError(
                    "Expected 'import', 'class', 'interface', 'fn', or 'extern fn' after 'export'",
                    self.stream.peek().span,
                )

            if self.stream.match(TokenKind.EXTERN):
                extern_token = self.stream.previous()
                fn_token = self.stream.expect(TokenKind.FN, "Expected 'fn' after 'extern'")
                functions.append(
                    self._parse_extern_function_decl(is_export=False, fn_token=fn_token, extern_token=extern_token)
                )
                continue

            if self.stream.match(TokenKind.CLASS):
                classes.append(self._parse_class_decl(is_export=False, class_token=self.stream.previous()))
                continue

            if self.stream.match(TokenKind.INTERFACE):
                interfaces.append(self._parse_interface_decl(is_export=False, interface_token=self.stream.previous()))
                continue

            if self.stream.match(TokenKind.FN):
                functions.append(self._parse_function_decl(is_export=False, fn_token=self.stream.previous()))
                continue

            raise ParserError("Unexpected token at module scope", self.stream.peek().span)

        end = self.stream.peek().span.end
        return ModuleAst(
            imports=imports,
            classes=classes,
            functions=functions,
            span=SourceSpan(start=start, end=end),
            interfaces=interfaces,
        )

    def parse_expression_root(self) -> Expression:
        expr = self._parse_expression()
        self.stream.expect(TokenKind.EOF, "Expected end of expression")
        return expr

    @staticmethod
    def _is_symbol_name_kind(kind: TokenKind) -> bool:
        return kind == TokenKind.IDENT

    def _expect_symbol_name(self, message: str) -> Token:
        token = self.stream.peek()
        if self._is_symbol_name_kind(token.kind):
            self.stream.advance()
            return token
        raise ParserError(message, token.span)

    def _parse_import_decl(
        self, *, is_export: bool, import_token: Token, export_token: Token | None = None
    ) -> ImportDecl:
        parts: list[str] = []
        first = self.stream.expect(TokenKind.IDENT, "Expected module path after import")
        parts.append(first.lexeme)

        while self.stream.match(TokenKind.DOT):
            part = self.stream.expect(TokenKind.IDENT, "Expected identifier after '.' in module path")
            parts.append(part.lexeme)

        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after import declaration")
        start_pos = export_token.span.start if export_token is not None else import_token.span.start
        span = SourceSpan(start=start_pos, end=semicolon.span.end)
        return ImportDecl(module_path=parts, is_export=is_export, span=span)

    def _parse_class_decl(self, *, is_export: bool, class_token: Token, export_token: Token | None = None) -> ClassDecl:
        name_token = self._expect_symbol_name("Expected class name")
        implements: list[TypeRefNode] = []
        if self.stream.match(TokenKind.IMPLEMENTS):
            while True:
                implements.append(self._parse_type_ref())
                if not self.stream.match(TokenKind.COMMA):
                    break
        self.stream.expect(TokenKind.LBRACE, "Expected '{' after class name")

        fields: list[FieldDecl] = []
        methods: list[MethodDecl] = []

        while not self.stream.check(TokenKind.RBRACE):
            if self.stream.is_at_end():
                raise ParserError("Unterminated class body", class_token.span)

            private_token: Token | None = None
            final_token: Token | None = None
            while True:
                if self.stream.match(TokenKind.PRIVATE):
                    if private_token is not None:
                        raise ParserError("Duplicate 'private' modifier", self.stream.previous().span)
                    private_token = self.stream.previous()
                    continue
                if self.stream.match(TokenKind.FINAL):
                    if final_token is not None:
                        raise ParserError("Duplicate 'final' modifier", self.stream.previous().span)
                    final_token = self.stream.previous()
                    continue
                break

            is_private = private_token is not None
            is_final = final_token is not None
            modifier_start = private_token if private_token is not None else final_token

            if self.stream.match(TokenKind.STATIC):
                if is_final:
                    raise ParserError("'final' modifier is only allowed on fields", final_token.span)
                static_token = self.stream.previous()
                fn_token = self.stream.expect(TokenKind.FN, "Expected 'fn' after 'static' in class body")
                methods.append(
                    self._parse_method_decl(
                        fn_token=fn_token,
                        is_static=True,
                        is_private=is_private,
                        start_token=modifier_start if modifier_start is not None else static_token,
                    )
                )
                continue

            if self.stream.match(TokenKind.FN):
                if is_final:
                    raise ParserError("'final' modifier is only allowed on fields", final_token.span)
                methods.append(
                    self._parse_method_decl(
                        fn_token=self.stream.previous(),
                        is_static=False,
                        is_private=is_private,
                        start_token=modifier_start,
                    )
                )
                continue

            if self.stream.check(TokenKind.IDENT) and self.stream.peek(1).kind == TokenKind.COLON:
                fields.append(
                    self._parse_field_decl(is_private=is_private, is_final=is_final, start_token=modifier_start)
                )
                continue

            raise ParserError("Expected field or method declaration in class body", self.stream.peek().span)

        rbrace = self.stream.expect(TokenKind.RBRACE, "Expected '}' after class body")
        start_pos = export_token.span.start if export_token is not None else class_token.span.start
        span = SourceSpan(start=start_pos, end=rbrace.span.end)
        return ClassDecl(
            name=name_token.lexeme,
            fields=fields,
            methods=methods,
            is_export=is_export,
            span=span,
            implements=implements,
        )

    def _parse_interface_decl(
        self, *, is_export: bool, interface_token: Token, export_token: Token | None = None
    ) -> InterfaceDecl:
        name_token = self._expect_symbol_name("Expected interface name")
        self.stream.expect(TokenKind.LBRACE, "Expected '{' after interface name")

        methods: list[InterfaceMethodDecl] = []
        while not self.stream.check(TokenKind.RBRACE):
            if self.stream.is_at_end():
                raise ParserError("Unterminated interface body", interface_token.span)
            fn_token = self.stream.expect(TokenKind.FN, "Expected method declaration in interface body")
            methods.append(self._parse_interface_method_decl(fn_token=fn_token))

        rbrace = self.stream.expect(TokenKind.RBRACE, "Expected '}' after interface body")
        start_pos = export_token.span.start if export_token is not None else interface_token.span.start
        return InterfaceDecl(
            name=name_token.lexeme,
            methods=methods,
            is_export=is_export,
            span=SourceSpan(start=start_pos, end=rbrace.span.end),
        )

    def _parse_interface_method_decl(self, *, fn_token: Token) -> InterfaceMethodDecl:
        name, params, return_type = self._parse_callable_signature()
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after interface method signature")
        return InterfaceMethodDecl(
            name=name,
            params=params,
            return_type=return_type,
            span=SourceSpan(start=fn_token.span.start, end=semicolon.span.end),
        )

    def _parse_field_decl(self, *, is_private: bool, is_final: bool, start_token: Token | None = None) -> FieldDecl:
        name = self.stream.expect(TokenKind.IDENT, "Expected field name")
        self.stream.expect(TokenKind.COLON, "Expected ':' after field name")
        type_ref = self._parse_type_ref()
        initializer: Expression | None = None
        if self.stream.match(TokenKind.ASSIGN):
            initializer = self._parse_expression()
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after field declaration")
        start = start_token.span.start if start_token is not None else name.span.start
        return FieldDecl(
            name=name.lexeme,
            type_ref=type_ref,
            initializer=initializer,
            is_private=is_private,
            is_final=is_final,
            span=SourceSpan(start=start, end=semicolon.span.end),
        )

    def _parse_method_decl(
        self, *, fn_token: Token, is_static: bool, is_private: bool, start_token: Token | None = None
    ) -> MethodDecl:
        name, params, return_type = self._parse_callable_signature()
        body = self._parse_block_stmt()
        return MethodDecl(
            name=name,
            params=params,
            return_type=return_type,
            body=body,
            is_static=is_static,
            is_private=is_private,
            span=SourceSpan(
                start=(start_token.span.start if start_token is not None else fn_token.span.start), end=body.span.end
            ),
        )

    def _parse_function_decl(
        self, *, is_export: bool, fn_token: Token, export_token: Token | None = None
    ) -> FunctionDecl:
        name, params, return_type = self._parse_callable_signature()
        body = self._parse_block_stmt()
        start_pos = export_token.span.start if export_token is not None else fn_token.span.start
        return FunctionDecl(
            name=name,
            params=params,
            return_type=return_type,
            body=body,
            is_export=is_export,
            is_extern=False,
            span=SourceSpan(start=start_pos, end=body.span.end),
        )

    def _parse_extern_function_decl(
        self, *, is_export: bool, fn_token: Token, extern_token: Token, export_token: Token | None = None
    ) -> FunctionDecl:
        name, params, return_type = self._parse_callable_signature()
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after extern function declaration")
        if export_token is not None:
            start_pos = export_token.span.start
        else:
            start_pos = extern_token.span.start
        return FunctionDecl(
            name=name,
            params=params,
            return_type=return_type,
            body=None,
            is_export=is_export,
            is_extern=True,
            span=SourceSpan(start=start_pos, end=semicolon.span.end),
        )

    def _parse_callable_signature(self) -> tuple[str, list[ParamDecl], TypeRefNode]:
        name = self.stream.expect(TokenKind.IDENT, "Expected function name")
        self.stream.expect(TokenKind.LPAREN, "Expected '(' after function name")

        params: list[ParamDecl] = []
        if not self.stream.check(TokenKind.RPAREN):
            while True:
                params.append(self._parse_param())
                if not self.stream.match(TokenKind.COMMA):
                    break

        self.stream.expect(TokenKind.RPAREN, "Expected ')' after parameters")
        self.stream.expect(TokenKind.ARROW, "Expected '->' after parameter list")
        return_type = self._parse_type_ref()
        return name.lexeme, params, return_type

    def _parse_param(self) -> ParamDecl:
        name = self.stream.expect(TokenKind.IDENT, "Expected parameter name")
        self.stream.expect(TokenKind.COLON, "Expected ':' after parameter name")
        type_ref = self._parse_type_ref()
        return ParamDecl(
            name=name.lexeme, type_ref=type_ref, span=SourceSpan(start=name.span.start, end=type_ref.span.end)
        )

    def _parse_type_ref(self) -> TypeRefNode:
        if self.stream.match(TokenKind.FN):
            fn_token = self.stream.previous()
            self.stream.expect(TokenKind.LPAREN, "Expected '(' after 'fn' in function type")

            param_types: list[TypeRefNode] = []
            if not self.stream.check(TokenKind.RPAREN):
                while True:
                    param_types.append(self._parse_type_ref())
                    if not self.stream.match(TokenKind.COMMA):
                        break

            self.stream.expect(TokenKind.RPAREN, "Expected ')' after function type parameters")
            self.stream.expect(TokenKind.ARROW, "Expected '->' after function type parameter list")
            return_type = self._parse_type_ref()
            fn_type = FunctionTypeRef(
                param_types=param_types,
                return_type=return_type,
                span=SourceSpan(start=fn_token.span.start, end=return_type.span.end),
            )
            if self.stream.check(TokenKind.LBRACKET):
                raise ParserError("Array function types are not supported yet", self.stream.peek().span)
            return fn_type

        token = self.stream.peek()
        if token.kind not in TYPE_NAME_TOKENS:
            raise ParserError("Expected type name", token.span)
        self.stream.advance()

        base_ref: TypeRef
        if token.kind != TokenKind.IDENT:
            base_ref = TypeRef(name=token.lexeme, span=token.span)
        else:
            parts = [token.lexeme]
            end = token.span.end
            while self.stream.match(TokenKind.DOT):
                segment = self._expect_symbol_name("Expected type name after '.' in qualified type")
                parts.append(segment.lexeme)
                end = segment.span.end

            base_ref = TypeRef(name=".".join(parts), span=SourceSpan(start=token.span.start, end=end))

        type_ref: TypeRefNode = base_ref
        while self.stream.match(TokenKind.LBRACKET):
            self.stream.expect(TokenKind.RBRACKET, "Expected ']' after '[' in array type")
            type_ref = ArrayTypeRef(
                element_type=type_ref, span=SourceSpan(start=type_ref.span.start, end=self.stream.previous().span.end)
            )

        return type_ref

    def _parse_block_stmt(self) -> BlockStmt:
        lbrace = self.stream.expect(TokenKind.LBRACE, "Expected '{' to start block")
        statements: list[Statement] = []

        while not self.stream.check(TokenKind.RBRACE):
            if self.stream.is_at_end():
                raise ParserError("Unterminated block", self.stream.peek().span)
            statements.append(self._parse_statement())

        rbrace = self.stream.expect(TokenKind.RBRACE, "Expected '}' after block")
        return BlockStmt(statements=statements, span=SourceSpan(start=lbrace.span.start, end=rbrace.span.end))

    def _parse_statement(self) -> Statement:
        if self.stream.match(TokenKind.VAR):
            return self._parse_var_decl_stmt(var_token=self.stream.previous())

        if self.stream.match(TokenKind.IF):
            return self._parse_if_stmt(if_token=self.stream.previous())

        if self.stream.match(TokenKind.WHILE):
            return self._parse_while_stmt(while_token=self.stream.previous())

        if self.stream.match(TokenKind.FOR):
            return self._parse_for_in_stmt(for_token=self.stream.previous())

        if self.stream.match(TokenKind.RETURN):
            return self._parse_return_stmt(return_token=self.stream.previous())

        if self.stream.match(TokenKind.BREAK):
            return self._parse_break_stmt(break_token=self.stream.previous())

        if self.stream.match(TokenKind.CONTINUE):
            return self._parse_continue_stmt(continue_token=self.stream.previous())

        if self.stream.check(TokenKind.LBRACE):
            return self._parse_block_stmt()

        if self.stream.check(TokenKind.FN):
            raise ParserError("Nested functions/closures are not supported in MVP", self.stream.peek().span)

        return self._parse_expr_or_assign_stmt()

    def _parse_var_decl_stmt(self, *, var_token: Token) -> VarDeclStmt:
        name = self.stream.expect(TokenKind.IDENT, "Expected variable name after 'var'")
        self.stream.expect(TokenKind.COLON, "Expected ':' after variable name")
        type_ref = self._parse_type_ref()
        initializer: Expression | None = None

        if self.stream.match(TokenKind.ASSIGN):
            initializer = self._parse_expression()

        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after variable declaration")
        return VarDeclStmt(
            name=name.lexeme,
            type_ref=type_ref,
            initializer=initializer,
            span=SourceSpan(start=var_token.span.start, end=semicolon.span.end),
        )

    def _parse_if_stmt(self, *, if_token: Token) -> IfStmt:
        condition = self._parse_expression()
        then_branch = self._parse_block_stmt()
        else_branch: BlockStmt | IfStmt | None = None

        if self.stream.match(TokenKind.ELSE):
            if self.stream.match(TokenKind.IF):
                else_branch = self._parse_if_stmt(if_token=self.stream.previous())
            elif self.stream.check(TokenKind.LBRACE):
                else_branch = self._parse_block_stmt()
            else:
                raise ParserError("Expected 'if' or '{' after 'else'", self.stream.peek().span)

        end_pos = else_branch.span.end if else_branch is not None else then_branch.span.end
        return IfStmt(
            condition=condition,
            then_branch=then_branch,
            else_branch=else_branch,
            span=SourceSpan(start=if_token.span.start, end=end_pos),
        )

    def _parse_while_stmt(self, *, while_token: Token) -> WhileStmt:
        condition = self._parse_expression()
        body = self._parse_block_stmt()
        return WhileStmt(
            condition=condition, body=body, span=SourceSpan(start=while_token.span.start, end=body.span.end)
        )

    def _parse_for_in_stmt(self, *, for_token: Token) -> ForInStmt:
        element_token = self.stream.expect(TokenKind.IDENT, "Expected loop variable name after 'for'")
        self.stream.expect(TokenKind.IN, "Expected 'in' after loop variable name")
        collection_expr = self._parse_expression()
        body = self._parse_block_stmt()
        return ForInStmt(
            element_name=element_token.lexeme,
            collection_expr=collection_expr,
            body=body,
            coll_temp_name=self._next_sugar_symbol("for_coll"),
            len_temp_name=self._next_sugar_symbol("for_len"),
            index_temp_name=self._next_sugar_symbol("for_i"),
            collection_type_name="",
            element_type_name="",
            span=SourceSpan(start=for_token.span.start, end=body.span.end),
        )

    def _parse_return_stmt(self, *, return_token: Token) -> ReturnStmt:
        value: Expression | None = None
        if not self.stream.check(TokenKind.SEMICOLON):
            value = self._parse_expression()
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after return statement")
        return ReturnStmt(value=value, span=SourceSpan(start=return_token.span.start, end=semicolon.span.end))

    def _parse_break_stmt(self, *, break_token: Token) -> BreakStmt:
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after break statement")
        return BreakStmt(span=SourceSpan(start=break_token.span.start, end=semicolon.span.end))

    def _parse_continue_stmt(self, *, continue_token: Token) -> ContinueStmt:
        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after continue statement")
        return ContinueStmt(span=SourceSpan(start=continue_token.span.start, end=semicolon.span.end))

    def _parse_expr_or_assign_stmt(self) -> Statement:
        expr = self._parse_expression()
        if self.stream.match(TokenKind.ASSIGN):
            value = self._parse_expression()
            semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after assignment")

            slice_write_stmt = self._try_build_slice_write_stmt(expr, value, semicolon.span.end)
            if slice_write_stmt is not None:
                return slice_write_stmt

            if not self._is_assignable_target(expr):
                raise ParserError("Invalid assignment target", expr.span)
            return AssignStmt(target=expr, value=value, span=SourceSpan(start=expr.span.start, end=semicolon.span.end))

        semicolon = self.stream.expect(TokenKind.SEMICOLON, "Expected ';' after expression statement")
        return ExprStmt(expression=expr, span=SourceSpan(start=expr.span.start, end=semicolon.span.end))

    @staticmethod
    def _is_assignable_target(expr: Expression) -> bool:
        return isinstance(expr, (IdentifierExpr, FieldAccessExpr, IndexExpr))

    @staticmethod
    def _try_build_slice_write_stmt(expr: Expression, value: Expression, end_span) -> ExprStmt | None:
        if not isinstance(expr, CallExpr):
            return None
        if not isinstance(expr.callee, FieldAccessExpr):
            return None
        if expr.callee.field_name != COLLECTION_METHOD_SLICE_GET:
            return None
        if len(expr.arguments) != 2:
            return None

        set_slice_callee = FieldAccessExpr(
            object_expr=expr.callee.object_expr, field_name=COLLECTION_METHOD_SLICE_SET, span=expr.callee.span
        )
        set_slice_call = CallExpr(
            callee=set_slice_callee,
            arguments=[expr.arguments[0], expr.arguments[1], value],
            span=SourceSpan(start=expr.span.start, end=end_span),
        )
        return ExprStmt(expression=set_slice_call, span=SourceSpan(start=expr.span.start, end=end_span))

    def _parse_expression(self) -> Expression:
        return self._parse_logical_or()

    def _parse_logical_or(self) -> Expression:
        expr = self._parse_logical_and()
        while self.stream.match(TokenKind.OROR):
            op = self.stream.previous()
            right = self._parse_logical_and()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_logical_and(self) -> Expression:
        expr = self._parse_bitwise_or()
        while self.stream.match(TokenKind.ANDAND):
            op = self.stream.previous()
            right = self._parse_bitwise_or()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_bitwise_or(self) -> Expression:
        expr = self._parse_bitwise_xor()
        while self.stream.match(TokenKind.PIPE):
            op = self.stream.previous()
            right = self._parse_bitwise_xor()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_bitwise_xor(self) -> Expression:
        expr = self._parse_bitwise_and()
        while self.stream.match(TokenKind.CARET):
            op = self.stream.previous()
            right = self._parse_bitwise_and()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_bitwise_and(self) -> Expression:
        expr = self._parse_equality()
        while self.stream.match(TokenKind.AMP):
            op = self.stream.previous()
            right = self._parse_equality()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_equality(self) -> Expression:
        expr = self._parse_comparison()
        while self.stream.match(TokenKind.EQEQ, TokenKind.NEQ):
            op = self.stream.previous()
            right = self._parse_comparison()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_comparison(self) -> Expression:
        expr = self._parse_type_test()
        while self.stream.match(TokenKind.LT, TokenKind.LTE, TokenKind.GT, TokenKind.GTE):
            op = self.stream.previous()
            right = self._parse_type_test()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_type_test(self) -> Expression:
        expr = self._parse_shift()
        if self.stream.match(TokenKind.IS):
            type_ref = self._parse_type_ref()
            return TypeTestExpr(
                operand=expr, type_ref=type_ref, span=SourceSpan(start=expr.span.start, end=type_ref.span.end)
            )
        return expr

    def _parse_shift(self) -> Expression:
        expr = self._parse_additive()
        while self.stream.match(TokenKind.LSHIFT, TokenKind.RSHIFT):
            op = self.stream.previous()
            right = self._parse_additive()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_additive(self) -> Expression:
        expr = self._parse_multiplicative()
        while self.stream.match(TokenKind.PLUS, TokenKind.MINUS):
            op = self.stream.previous()
            right = self._parse_multiplicative()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_multiplicative(self) -> Expression:
        expr = self._parse_power()
        while self.stream.match(TokenKind.STAR, TokenKind.SLASH, TokenKind.PERCENT):
            op = self.stream.previous()
            right = self._parse_power()
            expr = BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_power(self) -> Expression:
        expr = self._parse_unary()
        if self.stream.match(TokenKind.POW):
            op = self.stream.previous()
            right = self._parse_power()
            return BinaryExpr(
                left=expr, operator=op.lexeme, right=right, span=SourceSpan(start=expr.span.start, end=right.span.end)
            )
        return expr

    def _parse_unary(self) -> Expression:
        if self.stream.match(TokenKind.BANG, TokenKind.MINUS, TokenKind.TILDE):
            op = self.stream.previous()
            operand = self._parse_unary()
            return UnaryExpr(
                operator=op.lexeme, operand=operand, span=SourceSpan(start=op.span.start, end=operand.span.end)
            )

        if self._is_cast_start():
            lparen = self.stream.expect(TokenKind.LPAREN, "Expected '(' to start cast")
            type_ref = self._parse_type_ref()
            self.stream.expect(TokenKind.RPAREN, "Expected ')' after cast type")
            operand = self._parse_unary()
            return CastExpr(
                type_ref=type_ref, operand=operand, span=SourceSpan(start=lparen.span.start, end=operand.span.end)
            )

        return self._parse_postfix()

    def _parse_postfix(self) -> Expression:
        expr = self._parse_primary()

        while True:
            if self.stream.match(TokenKind.LPAREN):
                args: list[Expression] = []
                if not self.stream.check(TokenKind.RPAREN):
                    while True:
                        args.append(self._parse_expression())
                        if not self.stream.match(TokenKind.COMMA):
                            break

                rparen = self.stream.expect(TokenKind.RPAREN, "Expected ')' after arguments")
                expr = CallExpr(
                    callee=expr, arguments=args, span=SourceSpan(start=expr.span.start, end=rparen.span.end)
                )
                continue

            if self.stream.match(TokenKind.DOT):
                field = self._expect_symbol_name("Expected field name after '.'")
                expr = FieldAccessExpr(
                    object_expr=expr,
                    field_name=field.lexeme,
                    span=SourceSpan(start=expr.span.start, end=field.span.end),
                )
                continue

            if self.stream.match(TokenKind.LBRACKET):
                if self.stream.match(TokenKind.COLON):
                    end_expr: Expression | None = None
                    if not self.stream.check(TokenKind.RBRACKET):
                        end_expr = self._parse_expression()
                    rbracket = self.stream.expect(TokenKind.RBRACKET, "Expected ']' after slice expression")
                    expr = self._build_slice_expr(
                        object_expr=expr, begin_expr=None, end_expr=end_expr, end_span=rbracket.span.end
                    )
                    continue

                start_expr = self._parse_expression()
                if self.stream.match(TokenKind.COLON):
                    end_expr: Expression | None = None
                    if not self.stream.check(TokenKind.RBRACKET):
                        end_expr = self._parse_expression()
                    rbracket = self.stream.expect(TokenKind.RBRACKET, "Expected ']' after slice expression")
                    expr = self._build_slice_expr(
                        object_expr=expr, begin_expr=start_expr, end_expr=end_expr, end_span=rbracket.span.end
                    )
                    continue
